--- a/osteopathe.html
+++ b/osteopathe.html
@@ -60,28 +60,37 @@
 
   <header data-aos="fade-in" class="header mw-container">
     <div class="header__wrapper">
+      <nav class="navbar">
+      <a href="index.html">
       <p class="header__name">Henrique Nunes</p>
       <p class="header__wrapper__job">Ostéopathe à Bruges</p>
+    </a>
     </div>
-    <nav class="navbar">
-      <a class="navbar__link" href="index.html">Accueil</a>
-      <div class="dropdown">
-        <span class="navbar__link">Ostéopathie</span>
-        <div class="dropdown-content">
-          <div class="dropdown-content__wrapper">
-            <a class="dropdown-content__wrapper__link"  href="osteopathie.html">Définition</a>
-            <a class="dropdown-content__wrapper__link" 
+    <div class="navbar">
+      <div class="navbar__wrapper">
+        <div class="navbar__menu">
+        <a class="navbar__link" href="index.html">Accueil</a>
+        <div class="dropdown">
+          <span class="navbar__link">Ostéopathie</span>
+          <div class="dropdown-content">
+            <div class="dropdown-content__wrapper">
+              <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
+              <a class="dropdown-content__wrapper__link"
               href="consultation-osteopathie.html">Consultation</a>
-            <a class="dropdown-content__wrapper__link"  href="quand-consulter-un-osteopathe.html">Quand
-              consulter ?</a>
-
+              <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
+                consulter ?</a>
+                
+              </div>
+            </div>
           </div>
+          <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
+          <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
-      <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
-      <a class="navbar__link" href="tarifs.html">Tarifs</a>
-  <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
-
+        <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
+        <button class="menu"><img class="menu__img" src="./assets/images/menu.png" alt="Icone Menu"></button>
+        <button class="menu-close test"><img class="menu__img" src="./assets/images/close.png" alt="Icone Menu"></button>
+      </div>
     </nav>
   </header>
   <main class="">
